# gene2disease-onset-project

./: OLS API.ipynb  PAD Descendents .ipynb  QueryMonarchKGX.ipynb  SimSearch.ipynb  descendent_diseases.tsv  pyproject.toml
.ipynb_checkpoints/: OLS API-checkpoint.ipynb  QueryMonarchKGX-checkpoint.ipynb  SimSearch-checkpoint.ipynb
